Rename project and package from SpringBootLab to SideFlow
Updated the package name, artifact ID, and related references to align with the new project name, SideFlow. This change ensures consistency across all project files and adheres to naming conventions.

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>dev.nil</groupId>
-    <artifactId>springbootlab</artifactId>
+    <artifactId>sideflow</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-boot-lab</name>
     <description>
