Add JWT-based security and refactor application setup
Replaced password encoding configuration with JWT-based security, adding `JwtTokenProvider`, `JwtTokenFilter`, and `SecurityConfig`. Updated dependencies, switched to PostgreSQL, and migrated configs to `application.yml`. Minor fixes and enhancements in related classes.

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,22 @@
             <artifactId>mapstruct</artifactId>
             <version>1.5.5.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.5.5.Final</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.4.0</version> <!-- or latest -->
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version> <!-- Or latest -->
+        </dependency>
     </dependencies>
 
     <build>
